--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,22 @@
 /* Feel free to change me and make me your own! */
 
 body {
-  background-color: #edd8c3; 
+  background-color: #fceee0; 
   font-family: Georgia, serif; 
 }
 
 article {
-  margin-left: 10vw; 
-  margin-right: 10vw; 
+  margin-left: 8vw; 
+  margin-right: 8vw; 
 }
 
 h1 {
   text-align: center; 
-  font-size: 48px; 
+  font-size: 40px; 
 }
 
 h2 {
-  font-size: 36px; 
+  font-size: 30px; 
 }
 
 p {
